examples/test/conf/HTTPRoute/Backend/LBPolicy/Endpoints_default_lb-rr-test.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: lb-rr-test-service
  namespace: edgion-default
subsets:
  - addresses:
      - ip: "127.0.0.1"
      - ip: "127.0.0.2"
      - ip: "127.0.0.3"
    ports:
      - name: http
        port: 9999
        protocol: TCP
