examples/test/conf/HTTPRoute/Backend/LBPolicy/EndpointSlice_default_lb-rr-test.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: lb-rr-test
  namespace: edgion-default
  labels:
    kubernetes.io/service-name: lb-rr-test-service
addressType: IPv4
ports:
  - name: http
    port: 9999
    protocol: TCP
endpoints:
  - addresses:
      - "127.0.0.1"
    conditions:
      ready: true
  - addresses:
      - "127.0.0.2"
    conditions:
      ready: true
  - addresses:
      - "127.0.0.3"
    conditions:
      ready: true
