examples/test/conf/HTTPRoute/Backend/LBPolicy/HTTPRoute_default_lb-rr-endpoint.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lb-rr-endpoint
  namespace: edgion-default
  annotations:
    edgion.io/max-retries: "0"
spec:
  parentRefs:
    - name: lb-policy-gateway
      namespace: edgion-test
  hostnames:
    - "lb-rr-endpoint.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /test
      timeouts:
        request: 2s
        backendRequest: 1s
      backendRefs:
        - name: lb-rr-test-service
          kind: ServiceEndpoint
          port: 8080
